--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "type": "module",
   "homepage": "https://github.com/Duozoid/frontend-project-lvl1#readme",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "devDependencies": {
     "eslint": "^8.17.0",
