--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "brain-progression": "bin/brain-progression.js",
     "brain-prime": "bin/brain-prime.js"
   },
+  "dependencies": {
+    "makefile": "^0.0.2",
+    "readline-sync": "^1.4.10"
+  },
   "devDependencies": {
     "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
